# schorlarly

./: .env.example  .gitignore  .pre-commit-config.yaml  PRD.md  README.md  export.py  main.py  orchestrator.py  pyproject.toml  run.py  test_generators.py
agents/: arxiv_provider.py  context_manager.py  editor_agent.py  export_engine.py  input_validator.py  perplexity_provider.py  research_agent.py  search_provider.py  source_filter.py  state_manager.py  validation_agent.py  writing_agent.py
config/: defaults.py  settings.py  settings.yaml
config/templates/: final_year_project.yaml
examples/: attention_test.json  economics.json  microplastics.json  rag.json  simple_test.json
input/: example_academic_transcript.md  example_course_registration.md  example_inventory_mgt.md  example_medical_diagnosis.md  project_input.md  project_input_template.md
models/: __init__.py  paper.py  project.py  research.py  state.py  template_profile.py  validation.py
search/: __init__.py  arxiv_search.py  deduplication.py
src/api/: main.py
src/api/routes/: health.py
src/config/: settings.py
src/core/: config_loader.py  context_manager.py  orchestrator.py  state_manager.py
src/export/: __init__.py  diagram_renderer.py  word_exporter.py
src/generators/: __init__.py  automated_section.py  base.py  evidence_section.py  interactive_section.py  research_section.py  synthesis_section.py
src/llm/: client.py
src/models/: __init__.py  paper.py  research.py  search.py  state.py  validation.py
src/modules/: __init__.py  claim_extractor.py  research.py
src/modules/research/: arXiv_search.py  deduplication.py  question_generator.py  search.py
src/modules/search_provider/: __init__.py  arXiv.py  base.py  open_router.py  perplexity_search.py  semantic_scholar.py
src/modules/validation/: citation.py  content.py  validation.py
src/modules/writing/: context_assembly.py  drafting.py  ledger_update.py  prompt_builder.py  writing.py
src/parsers/: input_parser.py
src/research/: __init__.py  searcher.py  validator.py
src/storage/: claim.py  embedding.py  helpers.py  section.py  state_store.py
src/utils/: llm_client.py  logger.py
state/: plan.json  state.json
tests/: reproduce_issue.py  test_arXiv_search.py  test_batch_validation.py  test_citation_registry.py  test_claim_extractor.py  test_config.py  test_diagram.py  test_diagram_resizing.py  test_export.py  test_full_flow.py  test_generators.py  test_models.py  test_research_pipeline.py  test_validation_module.py  test_writing_module.py
utils/: llm_client.py  logger.py
